--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22,3 +22,17 @@ main {
 
 
 /* Footer styles */
+
+
+
+.product-image {
+    height: 200px; /* Fixed height for all product image containers */
+    width: 100%;
+    overflow: hidden;
+}
+
+.product-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* This makes images cover the container without distortion */
+}
