--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -46,7 +46,8 @@ h1, h2, h3 {
 ====================================== */
 main {
     /*padding-top: 20px;*/
-    padding-bottom: 50px;
+    height: 100vh;
+
 }
 
 /* ======================================
